<resources>
    <string name="app_name" translatable="false">UberEats</string>
    <string name="facebook_app_id" translatable="false">548490073515240</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb548490073515240</string>
    <string name="facebook_client_token" translatable="false">ce9126b12ce5ff4adfcf3bf8a446ac63</string>
    <string name="member_search_hint" translatable="false">請輸入姓名或會員編號</string>
    <string name="deliver_search_hint" translatable="false">請輸入姓名或工號</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_draw">DrawActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">會員管理中心</string>
    <string name="menu_gallery">外送員管理中心</string>
    <string name="menu_slideshow">登出</string>
    <string name="title_activity_manager_draw">ManagerDrawActivity</string>
    <string name="login">登入</string>
    <string name="email">帳號(電子郵件)</string>
    <string name="password">密碼</string>
    <string name="register">註冊</string>
    <string name="login_des">登入後繼續</string>
    <string name="phone_number">手機號碼</string>
    <string name="cancel">取消</string>
    <string name="register_des">註冊以繼續</string>
    <string name="recommend">為您推薦</string>
    <string name="payment">結帳</string>
    <string name="keep_shop">繼續點餐</string>
    <string name="textview">TextView</string>
    <string name="star">Star</string>
    <string name="fee">Fee</string>
    <string name="minute">00–00</string>
    <string name="title_activity_store_nv">StoreNvActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="toppings">加料</string>
    <string-array name="pay_method">
        <item>現金</item>
        <item>LINE Pay</item>
        <item>信用卡或簽帳金融卡</item>
    </string-array>
</resources>