<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation3"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_store_home"
        android:name="com.example.myloginapp.StorehomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_store_home" >
        <action
            android:id="@+id/action_navigation_store_home_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.myloginapp.StoreaccountFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_store_account" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.myloginapp.StoreproductFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_store_product" >
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_store_home"
            app:destination="@id/navigation_store_home" />
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_store_home2"
            app:destination="@id/navigation_store_home" />
    </fragment>
</navigation>